package com.lthaoshao.pattern.factory;

/**
 * <p> 移动电话 </p>
 *
 * @author lthaoshao
 * @version V1.0
 * @date 2019/7/14 19:30
 */
public interface IMobile {
    /**
     * 打电话
     */
    public void call();
}
